# star_reacher

./: .gitattributes  .gitignore  CITATION.cff  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  PRD.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  nightly.yml
bindings/: module.cpp
cpp/include/star/: constants.hpp  ephemeris.hpp  events.hpp  frames.hpp  integrate.hpp  rng.hpp  rotation.hpp  run.hpp  srlog_writer.hpp  time.hpp  vehicle_config.hpp  vehicle_cycle.hpp  version.hpp
cpp/src/: ephemeris.cpp  events.cpp  frames.cpp  frames_series.hpp  integrate.cpp  rng.cpp  rotation.cpp  run.cpp  srlog_writer.cpp  time.cpp  vehicle_cycle.cpp  version.cpp.in
cpp/src/gnc/: builtin.cpp  component.cpp  ekf.cpp
cpp/src/models/: actuators.cpp  aero.cpp  atmosphere_hp.cpp  atmosphere_mars.cpp  atmosphere_ussa76.cpp  drag.cpp  environment.cpp  gravgrad.cpp  gravity.cpp  massprops.cpp  propulsion.cpp  rigidbody.cpp  srp.cpp  thirdbody.cpp  twobody.cpp  vehicle6dof.cpp
cpp/src/sensors/: camera.cpp  imu.cpp  imu_ideal.cpp  optical.cpp  radio.cpp
cpp/tests/: golden_io.hpp  test_actuators.cpp  test_aero.cpp  test_atmosphere.cpp  test_drag.cpp  test_ekf.cpp  test_environment.cpp  test_ephemeris.cpp  test_events.cpp  test_frames.cpp  test_gnc.cpp  test_gnc_cycle.cpp  test_gravgrad.cpp  test_gravity.cpp  test_integrate.cpp  test_main.cpp  test_massprops.cpp  test_propulsion.cpp  test_rigidbody.cpp  test_rng.cpp  test_rotation.cpp  test_sensors.cpp  test_srlog.cpp  test_srp.cpp  test_thirdbody.cpp  test_time.cpp  test_twobody.cpp  test_vehicle6dof.cpp
docs/: KNOWN_ISSUES.md  gnc_plugins.md  ml_onnx.md  release_checklist.md
docs/adr/: 0001-license-and-visibility.md  0002-lunar-ephemeris-validation-de441.md
docs/audit/: phase6_evidence_audit.md
docs/ci/: phase6_crossplatform.md
docs/formats/: derived_elements.md  mc_manifest_v1.md  mc_regression_v1.md  npz_v1.md  parquet_v1.md  plots.md  sreph_v1.md  srgrav_v1.md  srlog_v1.md  vehicle_toml_v1.md  viewer.md
docs/mathlib/: .latexmkrc  chapter_manifest.toml  mathlib.tex  mathlib_extract.txt  mathlib_layout.txt  references.bib
docs/mathlib/chapters/: actuators.tex  aero.tex  camera.tex  drag.tex  ekf.tex  environment.tex  ephemeris.tex  events.tex  frames.tex  gnc_builtin.tex  gravgrad.tex  gravity.tex  harris_priester.tex  integrators.tex  mars_atmosphere.tex  massprops.tex  notation.tex  propulsion.tex  rigidbody.tex  rotations.tex  sensors_imu.tex  sensors_optical.tex  sensors_radio.tex  srp.tex  thirdbody.tex  time.tex  twobody.tex  ussa76.tex  vehicle6dof.tex
docs/perf/: pi5_checklist.md
docs/perf/results/: README.md
docs/report/: .latexmkrc  references.bib  report.tex
docs/review/: phase6_code_review.md  phase6_coverage_audit.md  phase6_coverage_closure.md  phase6_design_notes.md  phase6_red_team.md  phase6_review_triage.md  phase7_red_team.md
examples/: onnx_gnc_plugin.py  rl_space_env.py
examples/gnc_plugins/: pd_attitude.py
missions/: ascent_leo.toml  ascent_leo_gnc.toml  leo_attitude_gnc.toml  leo_attitude_gnc_plugin.toml  leo_attitude_onnx.toml  leo_attitude_rl.toml  leo_drag_hp.toml  leo_ekf_consistency.toml  leo_gravity_8x8.toml  leo_gravity_8x8_sweep.toml  leo_optical_nav.toml  mars_cruise.toml  mc_regression_sweep.toml  mission_a_cislunar.toml  tli.toml  twobody_leo.toml
python/star_reacher/: __init__.py  __main__.py  _corelink.py  _fixtures.py  anderson.py  chi2.py  cli.py  consistency.py  consistency_cli.py  data_fetch.py  derived.py  docsbuild.py  export.py  mc.py  mc_regression.py  mission.py  overrides.py  plotting.py  plugin.py  runner.py  sim.py  srlog.py  sweep.py  vehicle.py  verify.py  viewer.py
python/star_reacher/_assets/: README.md  ne_110m_coastline.json
python/star_reacher/_viewer/: app.js  template.html
python/star_reacher/gym/: __init__.py  defaults.py  space_env.py
python/star_reacher/ml/: __init__.py  onnx_gnc.py
scripts/: check_citation.py  check_golden_manifests.py  check_min_deps.py  cross_platform_divergence.py  golden_update.py  lint_chapters.py  perf_gate.py
scripts/crosstool/: README.md  build_orekit_zeroeop_data.py  compare_rms.py  gen_field_files.py  gen_zero_eop.py  run_gmat_case1.py  run_orekit.py
scripts/nees_diag/: confirm.py  decompose.py  gen_errors.py  gen_fixtures.py  mechanisms.py  pass_probability.py  report.py
tests/crosscheck/: ascent_3dof.py  manifest.toml
tests/fixtures/vehicles/: asymmetric_inertia.toml  bad_aero_header.toml  bad_header.csv  bad_range.toml  dangling_feed.toml  duplicate_stage_names.toml  missing_provenance.toml  non_spd_inertia.toml  non_unit_axis.toml  slender_aero.csv  tank_overfill.toml  throttle_inverted.toml  triangle_inequality.toml  unknown_key.toml  warning_low_liftoff_tw.toml
tests/golden/: README.md
tests/golden/actuators/: generate.py  manifest.toml  rcs.toml  wheels.toml
tests/interop/: README.md
tests/python/: conftest.py  test_anderson.py  test_cli.py  test_config_hash.py  test_consistency.py  test_cross_platform_divergence.py  test_crosscheck_ascent.py  test_crosstool_frozen_truth.py  test_crosstool_missions.py  test_csv_roundtrip.py  test_derived_elements.py  test_docs_governance.py  test_ekf_channels.py  test_ekf_consistency.py  test_ephemeris_horizons.py  test_export_cli_formats.py  test_export_npz.py  test_export_parquet.py  test_frames.py  test_gm_crosscheck.py  test_gnc_missions.py  test_gnc_pd_golden.py  test_gnc_plugin.py  test_gnc_python_component.py  test_gnc_validation.py  test_golden_two_key.py  test_gravity_data.py  test_integration_core.py  test_integrators.py  test_mc.py  test_mc_regression.py  test_mc_seed.py  test_mission_sequence.py  test_mission_validation.py  test_onnx_gnc.py  test_p6_optical_gates.py  test_perf_harness.py  test_phase5_missions.py  test_plot_golden.py  test_plot_render.py  (+17 more)
tests/refs/: aberration.py  allan.py  chi2.py  manifest.toml  pd_attitude.py  pinhole.py  quaternions.py  sensor_stats.py
vehicles/: electron_class.toml  electron_class_aero_full.csv  electron_class_aero_upper.csv  kick_stage.toml  probe.toml  smallsat.toml
(+159 files in other folders)
